# app3-gaas-syncer

./: .coveragerc  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.devcontainer/: .env.example  Dockerfile  k8-resource.yaml  skaffold.yaml
.k8s/: deployments.yaml  routes.yaml  services.yaml
src/: config.py
src/gaas_syncer/: api.py  db.py  main.py  models.py  repository.py  schema.py  service.py  uow.py
src/gaas_syncer/adapters/: db.py  repository.py
src/gaas_syncer/domain/: models.py
src/gaas_syncer/services/: __init__.py  client.py  uow.py  vlan.py
src/gaas_syncer/transport/: api.py  crons.py  stream.py
tests/: conftest.py  pytest.ini
